# agents-behave

./: .env  .gitignore  LICENSE  Notes.md  README.md  blog.md  blogin.md  pyproject.toml  reverse_proxy.py
agent_behave/: user_conversation.py
agents_behave/: base_llm.py  console_user.py  conversation_analyser.py  conversation_analyzer.py  conversation_runner.py  llm_user.py  test_user.py  user_agent_conversation.py  user_conversation.py
blog/: blog-bdd.md  blog-intro.md  blog-tests-with-bdd.md  blog-tests.md  blog-tests_wth_bdd.md  blog.md  build_chat_image.py  notes.md
blog/images/: User Agent Conversation.drawio  conversation_runner.drawio
hotel_reservations/: .env.example  main.py  runner.py  t.py  test_llm_user.py
hotel_reservations/features/: book_room.feature  environment.py
hotel_reservations/hotel_reservations/: assistant.py  core.py  fireworks_functions_parser.py  function_call_agent_output_parser.py  llm_user.py  llms.py  models_config.py  open_ai_functions_agent_output_parser_copy.py  openai_functions_copy.py  user_conversation.py
hotel_reservations/tests/: hotel_reservations_assistant_test.py
hotel_reservations_0/hotel_reservations/: conversation_analyzer.py  user_agent_conversation.py
hotel_reservations_0/tests/: hotel_reservations_assistant_test.py
hotel_reservations_1/hotel_reservations/: assistant.py  conversation_analyzer.py  llm_user.py  user_agent_conversation.py
hotel_reservations_full/: main.py
hotel_reservations_langhain/: main.py  t.py
hotel_reservations_no_langhain/: main.py
hotel_reservations_save/: .env
(+25 files in other folders)
