[tool.poetry]
name = "agents-behave"
version = "0.1.0"
description = ""
authors = ["Pedro Sousa <pedronsousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
behave = "^1.2.6"
flake8 = "^7.0.0"
httpx = "^0.27.0"
langchain = "0.1.12"
langchain-core = "^0.1.26"
langchain-openai = "^0.0.7"
langchain-together = "^0.0.2.post1"
pyhamcrest = "^2.1.0"
pytest = "^8.0.1"
python-dotenv = "^1.0.1"
ruff = "^0.2.2"
openai = "1.14.1"
colorama = "^0.4.6"
uvicorn = "0.22.0"
fastapi = "0.104.1"
litellm = {extras = ["proxy"], version = "^1.28.13"}
langfuse = "^2.19.1"
langchain-fireworks = "^0.1.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
